--- a/templates/admin/pendingArticles.html.twig
+++ b/templates/admin/pendingArticles.html.twig
@@ -7,9 +7,9 @@
     <header class="masthead">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
-                <div class="col-12 text-center bg-white">
+                <div class="col-12 text-center text-white masthead-frame">
                     <h1 class="font-weight-light">Pending articles</h1>
-                    <p class="lead">Subtile</p>
+                    <p class="lead">Subtitle</p>
                 </div>
             </div>
         </div>
@@ -20,10 +20,10 @@
         <div class="container">
             <div class="row header-dashboard py-5">
                 <div class="col-md-12 text-center dashboard_menu">
-                    <h2>Posts</h2>
-                    <a href="{{ path('manageUsers') }}" class="btn btn-info btn-dashboard">User list</a>
-                    <a href="{{ path('manageComments') }}" class="btn btn-info btn-dashboard">Reported comments</a>
-                    <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create a post</a>
+                    <h2>Pending articles</h2>
+                    <a href="{{ path('manageUsers') }}" class="btn btn-info btn-dashboard">Manage users</a>
+                    <a href="{{ path('manageComments') }}" class="btn btn-info btn-dashboard">Manage comments</a>
+                    <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create an article</a>
                     <a href="{{ path('admin') }}" class="btn btn-info btn-dashboard">Dashboard</a>
                 </div>
             </div>
