--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -9,7 +9,7 @@
     <header class="masthead">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
-                <div class="col-12 text-center bg-white">
+                <div class="col-12 text-center text-white masthead-frame">
                     <h1 class="font-weight-light">{{ article.title }}</h1>
                     <p class="lead">POSTED IN <span class="font-bold">{{ article.category.name }}</span></p>
                     <p class="lead">AUTHOR <span>Danny Jones</span></p>
