--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -9,9 +9,9 @@
     <header class="masthead">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
-                <div class="col-12 text-center bg-white">
+                <div class="col-12 text-center text-white masthead-frame">
                     <h1 class="font-weight-light">Contact us</h1>
-                    <p class="lead">Subtile</p>
+                    <p class="lead">Subtitle</p>
                 </div>
             </div>
         </div>
