--- a/templates/admin/manageComments.html.twig
+++ b/templates/admin/manageComments.html.twig
@@ -7,9 +7,9 @@
     <header class="masthead">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
-                <div class="col-12 text-center bg-white">
+                <div class="col-12 text-center text-white masthead-frame">
                     <h1 class="font-weight-light">Reported comments</h1>
-                    <p class="lead">Subtile</p>
+                    <p class="lead">Subtitle</p>
                 </div>
             </div>
         </div>
@@ -21,7 +21,7 @@
                 <div class="col-md-12 text-center dashboard_menu">
                     <h2>Comments</h2>
                     <a href="{{ path('admin') }}" class="btn btn-info btn-dashboard">Dashboard</a>
-                    <a href="{{ path('manageUsers') }}" class="btn btn-info btn-dashboard">User list</a>
+                    <a href="{{ path('manageUsers') }}" class="btn btn-info btn-dashboard">Manage users</a>
                     <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create an article</a>
                     <a href="{{ path('pendingArticles') }}" class="btn btn-info btn-dashboard">Manage pending articles</a>
                 </div>
