--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -10,7 +10,7 @@
     <header class="masthead">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
-                <div class="col-12 text-center bg-white">
+                <div class="col-12 text-center text-white masthead-frame">
                     <h1 class="font-weight-light">{{ article.title }}</h1>
                     <p class="lead">POSTED IN <span class="font-bold">{{ article.category.name }}</span></p>
                     <p class="lead">AUTHOR <span>Danny Jones</span></p>
@@ -25,7 +25,17 @@
     <!-- Page Content -->
     <section class="py-5">
         <div class="container">
-            <h1>Edit Article</h1>
+
+            <div class="row header-dashboard py-5">
+                <div class="col-md-12 text-center dashboard_menu">
+                    <h2>Edit articles</h2>
+                    <a href="{{ path('manageUsers') }}" class="btn btn-info btn-dashboard">Manage users</a>
+                    <a href="{{ path('manageComments') }}" class="btn btn-info btn-dashboard">Manage comments</a>
+                    <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create an article</a>
+                    <a href="{{ path('pendingArticles') }}" class="btn btn-info btn-dashboard">Manage pending articles</a>
+                    <a href="{{ path('admin') }}" class="btn btn-info btn-dashboard">Dashboard</a>
+                </div>
+            </div>
 
             {{ include('article/_form.html.twig', {'button_label': 'Update'}) }}
 
