--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -9,9 +9,9 @@
     <header class="masthead">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
-                <div class="col-12 text-center bg-white">
+                <div class="col-12 text-center text-white masthead-frame">
                     <h1 class="font-weight-light">Create article</h1>
-                    <p class="lead">Subtile</p>
+                    <p class="lead">Subtitle</p>
                 </div>
             </div>
         </div>
@@ -20,7 +20,17 @@
     <!-- Page Content -->
     <section class="py-5">
         <div class="container">
-            <h1>Create new Article</h1>
+
+            <div class="row header-dashboard py-5">
+                <div class="col-md-12 text-center dashboard_menu">
+                    <h2>Create new article</h2>
+                    <a href="{{ path('manageUsers') }}" class="btn btn-info btn-dashboard">Manage users</a>
+                    <a href="{{ path('manageComments') }}" class="btn btn-info btn-dashboard">Manage comments</a>
+                    <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create an article</a>
+                    <a href="{{ path('pendingArticles') }}" class="btn btn-info btn-dashboard">Manage pending articles</a>
+                    <a href="{{ path('admin') }}" class="btn btn-info btn-dashboard">Dashboard</a>
+                </div>
+            </div>
 
             {{ include('article/_form.html.twig') }}
 
