--- a/templates/article/newUserArticle.html.twig
+++ b/templates/article/newUserArticle.html.twig
@@ -9,9 +9,9 @@
     <header class="masthead">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
-                <div class="col-12 text-center bg-white">
+                <div class="col-12 text-center text-white masthead-frame">
                     <h1 class="font-weight-light">Create article</h1>
-                    <p class="lead">Subtile</p>
+                    <p class="lead">Subtitle</p>
                 </div>
             </div>
         </div>
@@ -20,6 +20,7 @@
     <!-- Page Content -->
     <section class="py-5">
         <div class="container">
+            <a href="{{ path('article') }}" class="btn btn-info btn-dashboard">Back to the articles</a>
             <h1>Create new Article</h1>
 
             {{ form_start(userArticleForm) }}
