--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,9 +7,9 @@
     <header class="masthead">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
-                <div class="col-12 text-center bg-white">
+                <div class="col-12 text-center text-white masthead-frame">
                     <h1 class="font-weight-light">ALGERdiscoveRIE</h1>
-                    <p class="lead">L'application qui va vous instruire et vous faire voyager</p>
+                    <p class="lead">The app that will make you travel and learn about Algeria</p>
                 </div>
 
             </div>
