--- a/templates/map/map.html.twig
+++ b/templates/map/map.html.twig
@@ -7,7 +7,7 @@
     <header class="masthead">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
-                <div class="col-12 text-center bg-white">
+                <div class="col-12 text-center text-white masthead-frame">
                     <h1 class="font-weight-light">Discover Algeria</h1>
                     <p class="lead">The best country in the world !</p>
                 </div>
